Fix layout issue on other extension view

--- a/src/app/index/index.component.scss
+++ b/src/app/index/index.component.scss
@@ -55,6 +55,8 @@
   padding: 20px 20px 0;
   text-align: center;
   color: #61B8C1;
+  height: 100vh;
+  background: linear-gradient(to bottom, #0f2125, #044);
 
   .title {
     margin: 20px 0;
